syntax = "proto3";

package serv.identity;

service IdentityService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc SendEmailVerification(SendEmailVerificationRequest) returns (Verification) {}
    rpc SendPhoneVerification(SendPhoneVerificationRequest) returns (Verification) {}
    rpc LoginWithEmail(LoginWithEmailRequest) returns (LoginWithEmailResponse) {}
    rpc LoginWithPhone(LoginWithPhoneRequest) returns (LoginWithPhoneResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}

    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {}
    rpc VerifyPhone(VerifyPhoneRequest) returns (VerifyPhoneResponse) {}

    rpc FindAccount(FindAccountRequest) returns (Account) {}
    rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {}

    rpc CreateAccess(Account) returns (CreateAccessResponse) {}
    rpc DeleteRefreshToken(DeleteRefreshTokenRequest) returns (DeleteRefreshTokenResponse) {}
    rpc ProvisionAccessToken(ProvisionAccessTokenRequest) returns (ProvisionAccessTokenResponse) {}
    rpc DecodeAccessToken(DecodeAccessTokenRequest) returns (Account) {}
}

message VerifyPhoneRequest {
    string phone = 1;
    string verificationCode = 2;
    string accountId = 3;
}

message VerifyPhoneResponse {
    string verificationId = 1;
}

message LoginWithPhoneRequest {
    string phone = 1;
    string verificationCode = 2;
    string verificationId = 3;
}

message LoginWithPhoneResponse {
    Account account = 1;
    string accessToken = 2;
    string refreshToken = 3;
}

message SendEmailVerificationRequest {
    string email = 1;
}

message SendPhoneVerificationRequest {
    string phone = 1;
}

message Verification {
    string id = 1;
    optional string owner = 2;
    string expiresAt = 3;
}

message RefreshToken {
    string id = 1;
    string expiresAt = 2;
    string account = 3;
}

message Email {
    string value = 2;
    bool isVerified = 4;
    bool isPrimary = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message Phone {
    string value = 2;
    bool isVerified = 4;
    bool isPrimary = 5;
    string createdAt = 6;
    string updatedAt = 7;
}

message Account {
    string id = 1;
    optional string displayName = 2;
    optional string firstName = 3;
    optional string lastName = 4;
    string createdAt = 5;
    string updatedAt = 6;
    repeated Email emails = 7;
    repeated Phone phones = 8;
}

message RegisterRequest {
    optional string displayName = 1;
    string email = 3;
    optional string phone = 4;
    optional string firstName = 5;
    optional string lastName = 6;
}

message RegisterResponse {
    Account account = 1;
}

message DeleteResponse {
    bool success = 1;
}

message UpdateAccountRequest {
    string accountId = 1;
    optional string displayName = 2;
    optional string firstName = 3;
    optional string lastName = 4;
}

message UpdateAccountResponse {
    Account updatedAccount = 1;
}

message LoginWithEmailResponse {
    Account account = 1;
    string accessToken = 2;
    string refreshToken = 3;
}

message LoginWithEmailRequest {
    string email = 1;
    string verificationCode = 2;
    string verificationId = 3;
}

message LogoutRequest {
    optional string refreshToken = 1;
}

message LogoutResponse {
    bool success = 1;
}

message VerifyEmailRequest {
    string email = 1;
    string verificationCode = 2;
    string accountId = 3;
}

message VerifyEmailResponse {
    string verificationId = 1;
}

message FindAccountRequest {
  optional string accountId = 1;
  optional string email = 2;
  optional string phone = 3;
}

message CreateAccessResponse {
    string refreshToken = 1;
    string accessToken = 2;
}

message DeleteRefreshTokenRequest {
    string refreshToken = 1;
}

message DeleteRefreshTokenResponse {
    bool success = 1;
}

message DecodeAccessTokenRequest {
    string accessToken = 1;
}

message ProvisionAccessTokenRequest {
    string refreshToken = 1;
}

message ProvisionAccessTokenResponse {
    string accessToken = 1;
}
